# vChisel_ros2_ws

./: .gitignore  IFLOW.md  PLAN.md  README.md  quick_start.sh  spec.md  start_hand_eye_calib.sh  start_system.sh  stop_hand_eye_calib.sh
Testpy/: Tsnap7test.py
src/hand_eye_calib/: 2nd.txt  CMakeLists.txt  package.xml
src/hand_eye_calib/include/hand_eye_calib/: hand_eye_calib.h
src/hand_eye_calib/launch/: calibration.launch.py
src/hand_eye_calib/msg/: CalibrationStatus.msg
src/hand_eye_calib/scripts/: auto_calibration_node.py  camera_calibration.py  data.yaml  hand_eye_bringup.py
src/hand_eye_calib/src/: hand_eye_calib.cpp  hand_eye_calib_srv.cpp
src/hand_eye_calib/srv/: HandEyeCalibData.srv
src/norm_calc/: CMakeLists.txt  package.xml
src/norm_calc/config/: norm_calc_params.yaml
src/norm_calc/include/norm_calc/: chisel_box.h  edge_grid.h  hole_detector.h  norm_calc.h
src/norm_calc/launch/: norm_calc_launch.py
src/norm_calc/src/: beifen  chisel_box.cpp  edge_grid.cpp  hole_detector.cpp  image_norm_viewer.cpp  norm_calc.cpp  norm_calc_server.cpp  norm_viewer.cpp  norm_viewer_new.cpp
src/norm_calc/srv/: GetRobotPose.srv  NormCalcData.srv
src/recipe_manager/: CMakeLists.txt  package.xml
src/recipe_manager/config/: default_recipe.yaml
src/recipe_manager/launch/: recipe_manager.launch.py
src/recipe_manager/msg/: Recipe.msg  RecipeInfo.msg
src/recipe_manager/recipe_manager/: recipe_node.py
src/recipe_manager/srv/: DeleteRecipe.srv  ListRecipes.srv  LoadRecipe.srv  SaveRecipe.srv
src/snap_7/: package.xml  setup.cfg  setup.py
src/snap_7/launch/: plc_sim.launch.py  snap_7.launch.py  system_launch.py  test_plc_sim.launch.py
src/snap_7/snap_7/: camera_monitor.py  len.py  plc_client_node.py  plc_sim_server.py  plcclientbeifen
src/vchisel_bridge/: CMakeLists.txt  package.xml
src/vchisel_bridge/launch/: bridge.launch.py
src/vchisel_bridge/msg/: Alarm.msg  SystemStatus.msg
src/vchisel_bridge/vchisel_bridge/: alarm_manager.py  bridge_node.py  image_bridge_node.py
src/vchisel_bringup/: CMakeLists.txt  package.xml
src/vchisel_bringup/config/: system_config.yaml
src/vchisel_bringup/launch/: calibration_mode.launch.py  full_system.launch.py  minimal.launch.py
src/vchisel_ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/vchisel_ui/electron/: main.ts  preload.ts
src/vchisel_ui/install/: local_setup.sh  setup.sh
src/vchisel_ui/log/: latest_build
src/vchisel_ui/src/: App.tsx  index.css
src/vchisel_ui/src/components/: Header.tsx  ImageViewer.tsx  Sidebar.tsx  StatusIndicator.tsx  index.ts
src/vchisel_ui/src/hooks/: index.ts  useRosConnection.ts
src/vchisel_ui/src/pages/: AlarmsPage.tsx  CalibrationPage.tsx  DashboardPage.tsx  OperationPage.tsx  RecipesPage.tsx  SettingsPage.tsx  VisionPage.tsx  index.ts
src/vchisel_ui/src/services/: rosBridge.ts
src/vchisel_ui/src/store/: appStore.ts
src/vchisel_ui/src/types/: index.ts
src/~/.vchisel/recipes/: default.yaml
~/.vchisel/recipes/: default.yaml
