<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vchisel_bringup</name>
  <version>1.0.0</version>
  <description>vChisel系统集成启动包 - System Integration Launch Package</description>
  <maintainer email="vchisel@bosch.com">vChisel Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 核心依赖 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- 子系统包依赖 -->
  <exec_depend>snap_7</exec_depend>
  <exec_depend>norm_calc</exec_depend>
  <exec_depend>hand_eye_calib</exec_depend>
  <exec_depend>recipe_manager</exec_depend>
  <exec_depend>vchisel_bridge</exec_depend>

  <!-- 相机依赖 -->
  <exec_depend>realsense2_camera</exec_depend>

  <!-- rosbridge依赖 -->
  <exec_depend>rosbridge_server</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
